--- a/index.html
+++ b/index.html
@@ -251,16 +251,15 @@
 					    			<div class="project-synopsis-container">
 					    				<div class="row project-synopsis-label">Project Synopsis</div>
 					    				<div class="row project-synopsis">
-					    					An experimental simulation of the afterlife coded in WebGL using the GPGPU and FBO to render 262k particles in real-time. It uses curl noise, simulated gravitational attraction, and time to define and distort parametric surfaces and 3D models.
+					    					This project name is inspired by a friend of mine, Ethan, who on the first day of our coding bootcamp when we had to introduce our first name along with a mnemonic that matched the first initial of our name, decided that C and E were the same letters and said, "I am Coffee Ethan".
 					    				</div>
 					    			</div>
 					    			<div class="project-video-container">
 					    				<div class="row project-video-label">Video</div>
 					    				<div class="row project-video">
 					    				 <video id="my-video" class="video-js" controls preload="auto" width="100%" height="100%"
-										  poster="assets/videos/metempsychosis/poster.png" data-setup='{"fluid": true}'>
-										    <source src="assets/videos/metempsychosis/reel.mp4" type='video/mp4'>
-										    <!-- <source src="MY_VIDEO.webm" type='video/webm'> -->
+										  poster="assets/videos/coffee/poster.png" data-setup='{"fluid": true}'>
+										    <source src="assets/videos/coffee/reel.mp4" type='video/mp4'>
 										    <p class="vjs-no-js">
 										      To view this video please enable JavaScript, and consider upgrading to a web browser that
 										      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -272,7 +271,7 @@
 					    			</div>
 					    			<div class="project-link-container">
 						    			<div class="project-link">
-						    				View Project
+						    				<a href="work/coffee/index.html">View Project</a>
 						    			</div>
 					    			</div>
 
