--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					    			</div>
 					    			<div class="project-link-container">
 						    			<div class="project-link">
-						    				View Project
+						    				<a href="work/metempsychosis/index.html">View Project</a>
 						    			</div>
 					    			</div>
 
