resized resolution of thumbnails

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					    		</div>
 					    		<div class="col col-3 project" data-drawer="1" data-id="3" data-project-title="tree">
 					    			<div class="row project-image">
-					    				<img src="assets/images/tree/thumb.jpg">
+					    				<img src="assets/images/tree/thumb.png">
 					    			</div>
 					    			<div class="row project-info-container">
 					    				<div class="row project-info-title">
@@ -450,7 +450,7 @@ Twinkle Twinkle, Jingle Bells, Mozart K330, Canon, Chao Ming.
 					    		</div>
 					    		<div class="col col-3 project">
 					    			<div class="row project-image">
-					    				<img src="assets/images/town/thumb.jpg">
+					    				<img src="assets/images/town/original.png">
 					    			</div>
 					    			<div class="row project-info-container">
 					    				<div class="row project-info-title">
@@ -469,7 +469,7 @@ Twinkle Twinkle, Jingle Bells, Mozart K330, Canon, Chao Ming.
 					    	<div class="row gutters auto project-row">
 					    		<div class="col col-3 project">
 					    			<div class="row project-image">
-					    				<img src="assets/images/jam4/thumb.jpg">
+					    				<img src="assets/images/jam4/thumb.png">
 					    			</div>
 					    			<div class="row project-info-container">
 					    				<div class="row project-info-title">
