added memory images

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					    			</div>
 					    			<div class="project-link-container">
 						    			<div class="project-link">
-						    				<a href="work/metempsychosis/index.html">View Project</a>
+						    				<a target="_blank" href="work/metempsychosis/index.html">View Project</a>
 						    			</div>
 					    			</div>
 
@@ -139,30 +139,61 @@
 					    			<div class="project-synopsis-container">
 					    				<div class="row project-synopsis-label">Project Synopsis</div>
 					    				<div class="row project-synopsis">
-					    					An interactive film set in the future. Year 3001. Artificial intelligence has taken over the world. A world in which memories are very sought after. You are a memory extraction operator. Your sole task is to monitor, observe and extract his memories from behind the machine.
+					    					An interactive film set in the future. Year 3001. Artificial intelligence has taken over the world. A world in which memories are very sought after. You are a memory extraction operator. Your sole task is to monitor, observe and extract his memories from behind the machine. [Video and Live Demo will be updated soon.]
 					    				</div>
 					    			</div>
-					    			<div class="project-video-container">
+					    			<div class="project-photo-container">
+					    				<div class="row project-Photo-label">Images</div>
+					    				<div class=" project-photos">
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/0.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/1.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/2.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/3.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/4.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/5.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/6.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/7.png">
+											    </div>
+											    <div class="image-holder">
+											    	<img src="assets/images/memory/thumb/8.png">
+											    </div>
+					    				</div>
+					    			</div>
+					    			<!-- <div class="project-video-container">
 					    				<div class="row project-video-label">Video</div>
+					    				Images
 					    				<div class="row project-video">
 					    				 <video id="my-video" class="video-js" controls preload="auto" width="100%" height="100%"
 										  poster="assets/videos/metempsychosis/poster.png" data-setup='{"fluid": true}'>
 										    <source src="assets/videos/metempsychosis/reel.mp4" type='video/mp4'>
-										    <!-- <source src="MY_VIDEO.webm" type='video/webm'> -->
 										    <p class="vjs-no-js">
 										      To view this video please enable JavaScript, and consider upgrading to a web browser that
 										      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
 										    </p>
 										  </video>
-					    					<!-- <iframe src="https://player.vimeo.com/video/218256671" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 					    				</div>
 
-					    			</div>
-					    			<div class="project-link-container">
+					    			</div> -->
+					    		<!-- 	<div class="project-link-container">
 						    			<div class="project-link">
-						    				View Project Documentation
+						    				View Project
 						    			</div>
-					    			</div>
+					    			</div> -->
 
 					    		</div>
 					    		<div class="project-detail" data-id="3">
@@ -271,7 +302,7 @@
 					    			</div>
 					    			<div class="project-link-container">
 						    			<div class="project-link">
-						    				<a href="work/coffee/index.html">View Project</a>
+						    				<a target="_blank" href="work/coffee/index.html">View Project</a>
 						    			</div>
 					    			</div>
 
