--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 					    			<div class="project-synopsis-container">
 					    				<div class="row project-synopsis-label">Project Synopsis</div>
 					    				<div class="row project-synopsis">
-					    					An interactive film set in the future. Year 3001. Artificial intelligence has taken over the world. A world in which memories are very sought after. You are a memory extraction operator. Your sole task is to monitor, observe and extract his memories from behind the machine. [Video and Live Demo will be updated soon.]
+					    					An interactive film set in the future. Year 3001. Artificial intelligence has taken over the world. A world in which memories are very sought after. You are a memory extraction operator. Your sole task is to monitor, observe and extract his memories from behind the machine. Video shot with Canon EOS 20D and edited in Adobe Premiere. Projection mapping on the body done with Processing, MadMapper and high-resolution projector. Three.JS used for outro.
 					    				</div>
 					    			</div>
 					    			<div class="project-photo-container">
 					    				<div class="row project-Photo-label">Images</div>
 					    				<div class=" project-photos">
-											    <div class="image-holder">
+											 <!--    <div class="image-holder">
 											    	<img src="assets/images/memory/thumb/0.png">
-											    </div>
+											    </div> -->
 											    <div class="image-holder">
 											    	<img src="assets/images/memory/thumb/1.png">
 											    </div>
