--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 				    	</div>
 
 				    	<div class="row">
-				    		
+				    		hi there
+				    		creative projects
 				    		<!-- I love to script in Python. -->
 				    	</div>
 				  <!--   	 <div class="row auto nav-link"><a href="portfolio.html">Portfolio</a></div>
