--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			   	 	<div class="col col-9">
 
 			   	 		<div class="row work-section-label">
-			   	 			Selected Creative Works
+			   	 			Selected Works
 			   	 		</div>
 
 			   	 		<div class="strip">
