--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 				    	</div>
 
 				    	<div class="row">
+				    		hi there
+				    		creative projects
 				    		<!-- I love to script in Python. -->
 				    	</div>
 				  <!--   	 <div class="row auto nav-link"><a href="portfolio.html">Portfolio</a></div>
@@ -55,7 +57,7 @@
 			   	 	<div class="col col-9">
 
 			   	 		<div class="row work-section-label">
-			   	 			Selected Works
+			   	 			Selected Creative Works
 			   	 		</div>
 
 			   	 		<div class="strip">
