--- a/index.html
+++ b/index.html
@@ -32,41 +32,11 @@
 
 	    <!-- <h1>Hello, world!</h1> -->
 	    	<div class="row gutters">
-<<<<<<< HEAD
 			   	 	<div class="col col-12">
 			   	 		<div class="row top auto">
 			   	 		<div class="row intro">
 			   	 			<div class="intro-bold">Hello --</div>
 			   	 			<div>My name's Kevin and I'm a Software Engineer and Creative Technologist based in New York. I'm currently studying Computer Science and Interactive Media Arts at New York University. I was a former intern at <a href="http://www.italki.com"><img style="width:35px;height:21px;position:relative;top:5px;" src="assets/images/italki.png"></a>.</div>
-=======
-	    		<!-- <section id="left"> -->
-			    	<div class="col col-3">
-			    		<div class="row" id="logo-heading">
-				    		<div class="col" id="logo-heading-text">kevin.z.li</div>
-				    	</div>
-				    	<div class="row auto" id="logo-subheading">
-				    		<div class="col">developer | creative technologist</div>
-				    	</div>
-
-				    	<div class="row">
-				    		hi there
-				    		creative projects
-				    		<!-- I love to script in Python. -->
-				    	</div>
-				  <!--   	 <div class="row auto nav-link"><a href="portfolio.html">Portfolio</a></div>
-				         <div class="row auto nav-link"><a href="portfolio.html">About</a></div>
-				    	 <div class="row auto nav-link"><a href="portfolio.html">Resume</a></div>
-				    	 <div class="row auto nav-link"><a href="portfolio.html">Blog</a></div>
-	 -->
-			    	</div>
-			   	<!-- </section> -->
-			   	 <!-- <section id="right"> -->
-
-			   	 	<div class="col col-9">
-
-			   	 		<div class="row work-section-label">
-			   	 			Selected Creative Works
->>>>>>> c8964594803b8f3028f516e1779e714d50b90e0a
 			   	 		</div>
 			   	 	</div>
 
@@ -178,7 +148,7 @@
 					    		</div>
 					    		
 					    	</div>
-					    	<div class="more" >
+					    	<div class="header" >
 						<a href="#work" class="">See more of my work!</a>
 						<!-- <a href="">Blog</a> -->
 					</div>
