--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				   	 			<div class="col col-3 project">
 			   	 					<a href="metempsychosis.html">
 						    			<div class="row project-image">
-						    				<img src="assets/images/metempsychosis/thumb.jpg">
+						    				<img src="assets/images/metempsychosis/thumb.png">
 						    			</div>
 						    			<div class="row project-info-container">
 						    				<div class="row project-info-title">
