--- a/metempsychosis.html
+++ b/metempsychosis.html
@@ -60,6 +60,11 @@
 						An experimental simulation of the afterlife coded in WebGL using the GPGPU and FBO to render 262k particles in real-time. It uses curl noise, simulated gravitational attraction, and time to define and distort parametric surfaces and 3D models. 
 					</div>
 				</div>
+				<div class="project-link-url-container">
+					<div class="row project-link-url">
+						<a href="./work/metempsychosis/index.html">View Project</a>
+					</div>
+				</div>
 			</div>
 			<div class="col col-8 description">
 				
