fixed memory loading

--- a/work/memory/index.html
+++ b/work/memory/index.html
@@ -31,6 +31,12 @@
 </head>
 <body>
 
+	<div id="wait">
+		Please wait ...
+		<div id="wait-assets">
+			this should take no more than 30 seconds.
+		</div>
+	</div>
 	<div id="intro">
 		<h1>ex | memory</h1>
 		<p>an interactive film set in the future
